<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.CalculationActivity">


    <!--
    <ScrollView
        android:id="@+id/scrollA"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <HorizontalScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fillViewport="false">

            <TableLayout
                android:id="@+id/calculation_A"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center" />
        </HorizontalScrollView>
    </ScrollView>

    <ScrollView
        android:id="@+id/scrollB"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="parent">

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableLayout
                android:id="@+id/calculation_B"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center" />
        </HorizontalScrollView>
    </ScrollView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    -->


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/horizontalGuide"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/calculationOutput"
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <TableLayout
                    android:id="@+id/calculation_A"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"


                    android:layout_marginStart="15dp"
                    android:layout_marginLeft="15dp"

                    android:layout_marginEnd="15dp"
                    android:layout_marginRight="15dp"

                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/calculation_B"
                    app:layout_constraintHorizontal_chainStyle="spread"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <TextView
                    android:id="@+id/calculation_op"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/calculation_B"


                    app:layout_constraintStart_toEndOf="@+id/calculation_A"
                    app:layout_constraintTop_toTopOf="parent" />

                <TableLayout
                    android:id="@+id/calculation_B"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"


                    android:layout_marginEnd="15dp"
                    android:layout_marginRight="15dp"

                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/calculation_R"

                    app:layout_constraintHorizontal_chainStyle="packed"

                    app:layout_constraintStart_toEndOf="@+id/calculation_A"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/calculation_equals"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/calculation_R"


                    app:layout_constraintStart_toEndOf="@+id/calculation_B"
                    app:layout_constraintTop_toTopOf="parent"


                    />

                <TableLayout
                    android:id="@+id/calculation_R"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"


                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"

                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintStart_toEndOf="@+id/calculation_B"

                    app:layout_constraintTop_toTopOf="parent"


                    />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </HorizontalScrollView>
    </ScrollView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontalGuide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"


        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/horizontalGuide">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <Button
                android:id="@+id/calculation_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="doCalculation"
                android:text="@string/execute_calculation" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/calculation_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onOperationSelected"
                android:text="@string/opButton_add" />

            <Button
                android:id="@+id/calculation_subtract"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onOperationSelected"
                android:text="@string/opButton_sub" />

            <Button
                android:id="@+id/calculation_multiply"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onOperationSelected"
                android:text="@string/opButton_mult" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/calculation_scale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onOperationSelected"
                android:text="@string/opButton_scale" />

            <Button
                android:id="@+id/calculation_transpose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onOperationSelected"
                android:text="@string/opButton_transpose" />

            <Button
                android:id="@+id/calculation_invert"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onOperationSelected"
                android:text="@string/opButton_invert" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/calculation_determinant"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onOperationSelected"
                android:text="@string/opButton_determinant" />

            <Button
                android:id="@+id/calculation_rank"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onOperationSelected"
                android:text="@string/opButton_rank" />

            <Button
                android:id="@+id/calculation_topower"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onOperationSelected"
                android:text="@string/opButton_toPower" />
        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/calculation_openViewMatrices"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="navigateButton"
        android:text="@string/viewButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/calculation_openCreateMatrix"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="navigateButton"
        android:text="@string/newButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/calculation_openViewMatrices" />

    <Button
        android:id="@+id/calculation_openHistory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="navigateButton"
        android:text="@string/historyButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/calculation_openCreateMatrix" />

</androidx.constraintlayout.widget.ConstraintLayout>