<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/select_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/select_button_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onButtonClicked"
        android:text="@string/applySelection_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/select_guide_90" />

    <Button
        android:id="@+id/select_button_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onButtonClicked"
        android:text="@string/cancelSelection_button"
        app:layout_constraintStart_toEndOf="@+id/select_button_ok"
        app:layout_constraintTop_toTopOf="@+id/select_guide_90" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/select_A"
        android:layout_width="match_parent"
        android:layout_height="0dp"

        app:layout_constraintBottom_toBottomOf="@id/select_guide_45"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/select_guide_5" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/select_B"
        android:layout_width="match_parent"
        android:layout_height="0dp"

        app:layout_constraintBottom_toBottomOf="@id/select_guide_90"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/select_guide_50" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/select_guide_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/select_guide_50"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/select_guide_90"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/select_guide_45"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.45" />

    <TextView
        android:id="@+id/label_A"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="19dp"
        android:layout_marginLeft="19dp"
        android:text="@string/label_leftoperand"
        app:layout_constraintBottom_toTopOf="@+id/select_A"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/label_B"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_rightoperand"
        app:layout_constraintBottom_toTopOf="@+id/select_B"
        app:layout_constraintStart_toStartOf="@+id/label_A" />
</androidx.constraintlayout.widget.ConstraintLayout>