<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rounded_box"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal"

        android:layout_weight="0.1"
        >

        <TextView
            android:id="@+id/history_popup_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <ImageButton
            android:id="@+id/history_closebutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            app:srcCompat="@android:drawable/btn_dialog" />
    </LinearLayout>

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"

        android:layout_weight="0.9"
        >

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <TableLayout
                    android:id="@+id/popup_history_A"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="5dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/popup_history_op"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/popup_history_op"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginRight="5dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/popup_history_B"
                    app:layout_constraintStart_toEndOf="@id/popup_history_A"
                    app:layout_constraintTop_toTopOf="parent" />

                <TableLayout
                    android:id="@+id/popup_history_B"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="5dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/popup_history_equals"
                    app:layout_constraintStart_toEndOf="@id/popup_history_op"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/popup_history_equals"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"

                    android:layout_marginLeft="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginRight="5dp"
                    android:text="@string/symbol_equals"

                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/popup_history_Result"
                    app:layout_constraintStart_toEndOf="@id/popup_history_B"
                    app:layout_constraintTop_toTopOf="parent" />

                <TableLayout
                    android:id="@+id/popup_history_Result"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="5dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/popup_history_equals"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </HorizontalScrollView>
    </ScrollView>

        <EditText
            android:id="@+id/history_nameInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/newMatrix_hintname"
            android:inputType="textPersonName"
            android:maxLength="@integer/names_max_characters"

            android:layout_weight="0.05"
            />


        <Button
            android:id="@+id/history_savebutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/history_saveResult"



            android:layout_weight="0.05"/>

</LinearLayout>